fix: change button text from LOGIN to SIGNUP in signup form

--- a/signup.html
+++ b/signup.html
@@ -49,7 +49,7 @@
                 </div>
                 <input type="text" placeholder="Repeat Password" />
             </div>
-            <button>LOGIN</button>
+            <button>SIGNUP</button>
             <span>Already have an Account?<a href="./index.html"> login</a></span>
         </div>
     </body>
